Fix flex alignment issues

--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
+:root {
+    --primary-bg: MintCream;
+    --secondary-bg: GhostWhite;
+}
+
 body {
     display: flex;
     margin: 0px;
     padding: 0px;
-    justify-items: auto;
+    background-color: var(--primary-bg);
 }
 
 #bg-img-container {
-    max-height: 100vh;
     position: relative;
 }
 
 #bg-img-container img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: auto;
+    max-height: 100vh;
 }
 
 .logo-container {
@@ -30,4 +34,11 @@ body {
 #content-container {
     display: flex;
     flex-direction: column;
+    justify-content:space-evenly;
+    flex: auto;
+    text-align: center;
+}
+
+.form-container {
+    background-color: var(--secondary-bg);
 }
